@@ -51,7 +51,6 @@ CONFIG_OS_SCRIPT       = $(GNUSTEP_MAKEFILES)/os.sh
 CLEAN_CPU_SCRIPT       = $(GNUSTEP_MAKEFILES)/clean_cpu.sh
 CLEAN_VENDOR_SCRIPT    = $(GNUSTEP_MAKEFILES)/clean_vendor.sh
 CLEAN_OS_SCRIPT        = $(GNUSTEP_MAKEFILES)/clean_os.sh
-TRANSFORM_PATHS_SCRIPT = $(GNUSTEP_MAKEFILES)/transform_paths.sh
 REL_PATH_SCRIPT        = $(GNUSTEP_MAKEFILES)/relative_path.sh
 
 #
