@@ -1,3 +1,13 @@
+2007-02-19  David Ayers  <ayers@fsfe.org>
+
+	* GNUmakefile.in (uninstall:): Remove print_unique_pathlist.sh,
+	filesystem.sh, filesystem.csh and gnustep-config.  Remove
+	GNUSTEP_TARGET_LDIR.  Reorder removed directories according
+	to reverse order of installation.  Only remove existing directories.
+	Remove obsolete comment.
+
+	* common.make (TRANSFORM_PATHS_SCRIPT): Remove obsolete variable.
+	
 2007-02-19  Nicola Pero  <nicola.pero@meta-innovation.com>
 
 	* Documentation/install.texi: Rewritten large parts to describe
